# PDF-Translator

./: AGENTS.md  README.md  pyproject.toml
docs/: AI_RULES.md  PROJECT_GUIDELINES.md  QA_CHECKLIST.md  TERMINOLOGY.md  WORKFLOW.md
docs/adr/: 0001-single-immutable-document-model.md
src/pdf_translator/: __init__.py  __main__.py  cli.py  config.py  docx_builder.py  exceptions.py  image_backfill.py  image_exporter.py  models.py  parser.py  pipeline.py  translator.py  utils.py  validator.py
src/pdf_translator/parser/: __init__.py  base.py  docx.py  factory.py  pdf.py
tests/: test_models.py  test_parser.py  test_pipeline.py  test_validator.py
