[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-word-technical-translator"
version = "0.1.0"
description = "Convert Chinese technical documents into editable English DOCX files."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
pdf-translator = "pdf_translator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]
